--- a/styles/var.scss
+++ b/styles/var.scss
@@ -8,8 +8,8 @@ $primary--very-dark-color: #002233;
 $primary-dark-color: #043a70;
 $primary-color: #054A91;
 $primary-light-color: #3E7CB1;
-$primary-very-light-color: #81A4CD;
-$primary-white-color: #e6eaf0;
+$primary-very-light-color: #8bacd1;
+$primary-white-color: #eef1f5;
 
 $secondary-dark-color: #df6c00;
 $secondary-color: #F17300;
