--- a/styles/AllCardSection.module.scss
+++ b/styles/AllCardSection.module.scss
@@ -7,7 +7,6 @@
     align-items: center;
     justify-content: flex-start;
     flex: 1;
-    height: 40rem;
 
     &_header {
         width: 100%;
@@ -26,24 +25,21 @@
             align-items: center;
             justify-content: center;
             input {
-                border: solid 1px $secondary-color;
-                border-top-left-radius: 4px;
-                border-bottom-left-radius: 4px;
-                height: 2rem;
+                border: solid 1px $primary-light-color;
+                border-radius: 5px;
+                height: 2.5rem;
                 width: 15rem;
-            }
+                padding-left: 1rem;
+                font-size: 1.2rem;
+                font-family: $primary-font;
 
-            button {
-                background-color: $secondary-color;
-                border: none;
-                height: 2rem;
-                color: #fff;
-                font-size: 1.1rem;
-                width: 5rem;
-                border-top-right-radius: 4px;
-                border-bottom-right-radius: 4px;
-                cursor: pointer;
-                outline: none;
+                &:focus {
+                    outline: none;
+                }
+
+                &::placeholder {
+                    font-family: $primary-font;
+                }
             }
         }
     }
