--- a/styles/products.module.scss
+++ b/styles/products.module.scss
@@ -6,4 +6,6 @@
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
+    padding-bottom: 10rem;
+    border-bottom: solid 1px $primary-color;
 }
