--- a/styles/SidePanel.module.scss
+++ b/styles/SidePanel.module.scss
@@ -4,20 +4,44 @@
     width: 18%;
     height: 20rem;
     border-right: solid 1px $secondary-color;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
 
     h1 {
         font-size: 2rem;
         margin-bottom: 1rem;
+
+        @media screen and (max-width: 1025px) {
+            display: none;
+        }
     }
 
     ul {
         list-style: none;
         margin-left: 1rem;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+
+        @media screen and (max-width: 1025px) {
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            margin-bottom: 1rem;
+        }
 
         li {
             display: flex;
             align-items: center;
             justify-content: flex-start;
+
+            @media screen and (max-width: 1025px) {
+                margin-right: 2rem;
+            }
 
             button {
                 background-color: transparent;
@@ -32,10 +56,25 @@
                 outline: none;
                 color: $text-grey-color;
 
+                @media screen and (max-width: 585px) {
+                    font-size: 1rem;
+                }
+
                 &:hover {
                     text-decoration: underline;
                 }
             }
         }
+    }
+
+    @media screen and (max-width: 1025px) {
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        border-right: none;
+        border-bottom: 1px solid $secondary-light-color;
+        width: 100%;
+        margin-bottom: 2rem;
+        height: 3rem;
     }
 }
