--- a/styles/checkout.module.scss
+++ b/styles/checkout.module.scss
@@ -1,6 +1,6 @@
 @import './var.scss';
 
-.cart {
+.checkout {
     width: 75vw;
     min-height: 70vh;
     border-bottom: solid 1px $primary-color;
