--- a/styles/CardSection.module.scss
+++ b/styles/CardSection.module.scss
@@ -23,5 +23,23 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+
+        @media screen and (max-width: 1366px) {
+            width: 90%;
+        }
+
+        @media screen and (max-width: 1020px) {
+            flex-direction: column;
+            gap: 1rem;
+        }
+    }
+
+    @media screen and (max-width: 1500px) {
+        width: 90vw;
+    }
+
+    @media screen and (max-width: 1366px) {
+        width: 100vw;
+        padding: 4 4rem;
     }
 }
