--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -2,7 +2,7 @@
 
 .footer {
     width: 75vw;
-    height: 20rem;
+    height: 30rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -15,6 +15,11 @@
         justify-content: flex-end;
         div {
             transform: scale(2);
+        }
+
+        @media screen and (max-width: 1100px) {
+            justify-content: center;
+            width: 100%;
         }
     }
 
@@ -31,6 +36,10 @@
             font-size: 2rem;
             margin-bottom: 1rem;
             font-weight: 300;
+
+            @media screen and (max-width: 525px) {
+                font-size: 1.3rem;
+            }
         }
 
         &_social {
@@ -39,10 +48,35 @@
             justify-content: space-between;
             width: 40%;
 
+            @media screen and (max-width: 1100px) {
+                width: 100%;
+                justify-content: center;
+                gap: 1rem;
+            }
+
             a {
                 font-size: 1.2rem;
                 color: $primary-color;
             }
         }
+
+        @media screen and (max-width: 1100px) {
+            width: 100%;
+        }
+    }
+
+    @media screen and (max-width: 1500px) {
+        width: 90vw;
+    }
+
+    @media screen and (max-width: 1366px) {
+        width: 100vw;
+        padding: 0 4rem;
+    }
+
+    @media screen and (max-width: 1100px) {
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
     }
 }
