--- a/styles/NavLinks.module.scss
+++ b/styles/NavLinks.module.scss
@@ -6,10 +6,25 @@
     justify-content: space-between;
     width: 18rem;
     list-style: none;  
+    position: relative;
 
     li {
         a {
-            font-size: 1.2rem;
+            font-size: 1.2rem;     
         }
     }
+}
+
+.noti {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: $primary-color;
+    left: 1rem;
+    bottom: 1rem;
+    height: 2rem;
+    border-radius: 4px;
+    width: 2rem;
+    font-size: 1rem;
+    color: $text-light-color;  
 }
