--- a/styles/[id].module.scss
+++ b/styles/[id].module.scss
@@ -6,4 +6,13 @@
     flex-direction: column;
     align-self: center;
     justify-content: center;
+
+    @media screen and (max-width: 1500px) {
+        width: 90vw;
+    }
+
+    @media screen and (max-width: 1366px) {
+        width: 100vw;
+        padding: 0 4rem;
+    }
 }
