--- a/styles/products.module.scss
+++ b/styles/products.module.scss
@@ -8,4 +8,17 @@
     justify-content: space-between;
     padding-bottom: 10rem;
     border-bottom: solid 1px $primary-color;
+
+    @media screen and (max-width: 1500px) {
+        width: 90vw;
+    }
+
+    @media screen and (max-width: 1366px) {
+        width: 100vw;
+        padding: 0 4rem;
+    }
+
+    @media screen and (max-width: 1025px) {
+        flex-direction: column;
+    }
 }
